# Py9Web

./: .gitignore
HomeWork_12/: main.py  pyproject.toml  test.py
HomeWork_12/migrations/versions/: 32137ad1902f_change_type_in_contact_birthday.py  7ab1ac966d9e_add_users.py  bfb3623df14e_init.py  f66fbfdf4fd2_change_email_notnull.py  fc39e790aff9_add_role_of_user.py
HomeWork_12/src/: schemas.py
HomeWork_12/src/Services/: auth.py
HomeWork_12/src/conf/: config.ini
HomeWork_12/src/database/: db.py  models.py
HomeWork_12/src/repository/: contacts.py  users.py
HomeWork_12/src/routes/: auth.py  contacts.py  front.py
HomeWork_12/static/js/: auth.js  contacts.js
HomeWork_12/templates/: base.html  contacts.html  index.html
HomeWork_13/: .example.env  main.py  pyproject.toml
HomeWork_13/migrations/versions/: b372102ee4a6_field_email_confirmed_add.py
HomeWork_13/postgres-data/: postmaster.pid
HomeWork_13/postgres-data/global/: 1260  1262  2671  pg_control  pg_internal.init
HomeWork_13/postgres-data/pg_stat/: db_0.stat  db_13757.stat  db_16384.stat  global.stat
HomeWork_13/postgres-data/pg_stat_tmp/: db_0.stat  db_13757.stat  db_16384.stat  global.stat
HomeWork_13/src/: schemas.py
HomeWork_13/src/conf/: config.py
HomeWork_13/src/database/: db.py  models.py
HomeWork_13/src/repository/: contacts.py  users.py
HomeWork_13/src/routes/: auth.py  contacts.py  front.py
HomeWork_13/src/services/: auth.py  email.py
HomeWork_13/static/css/: style.css
HomeWork_13/static/js/: auth.js  contacts.js
HomeWork_13/templates/: base.html  contacts.html
(+93 files in other folders)
